# oreilly_opencv_workshop2018

./: Readme.md
InstallationScripts/: README.md
InstallationScripts/Ubuntu16/: installOpenCV.sh
InstallationScripts/Ubuntu18/: installOpenCV.sh
cxx/: CMakeLists.txt
cxx/Camera/: CMakeLists.txt  main.cpp
cxx/CameraFilters/: CMakeLists.txt  main.cpp
cxx/FaceDetection/: CMakeLists.txt  main.cpp
cxx/FaceDetectionAndRecognition/: CMakeLists.txt  main.cpp
java/AndroidCamera/: settings.gradle
java/AndroidCamera/app/: build.gradle
java/CameraFilters/app/: build.gradle
java/FaceDetection/app/: build.gradle
java/FaceRecognition/: settings.gradle
java/FaceRecognition/app/: build.gradle
java/server/: build.gradle
js/: camera.html  cascade_face_detection.html  cascade_face_detection_remote_recognition.html  filters.html  index.html
js/files/: utils.js
python-template/Camera/: Camera.py
python-template/CameraFilters/: CameraFilters.py
python-template/FaceDetection/: FaceDetection.py
python-template/FaceDetectionAndRecognition/: DnnRecognizer.py  FaceDetectionAndRecognition.py
python/Camera/: Camera.py
python/CameraFilters/: CameraFilters.py
python/DeepLearning/: OpenPose.ipynb
python/DeepLearning/object_detection/: OpenPose.ipynb  README  coco_class_labels.txt  object_detection.py  object_detection_video.py  tf_object_detection.ipynb
python/DeepLearning/pose/: OpenPose.ipynb  OpenPose.py
python/FaceDetection/: FaceDetection.py
python/FaceDetectionAndRecognition/: DnnRecognizer.py  FaceDetectionAndRecognition.py
python/HDR/: hdr.ipynb  hdr.py
python/InstallationScripts/: README.md
python/ObjectTracking/: objectTracking.ipynb  objectTracking.py
python/ObjectTracking/.ipynb_checkpoints/: objectTracking-checkpoint.ipynb
python/Panorama/: panorama.ipynb  panorama.py
python/SatyaIntro/: intro.ipynb
python/SeamlessCloning/: clone.ipynb  clone.py
python/server/: CommonRecognizer.py  DnnRecognizer.py  DnnRecognizerTest.py  DumpingRecognizer.py  Readme.md  RestAPIHandler.py  server.py
python/server/files/: .gitattributes
(+36 files in other folders)
